# sherpa/include/sherpa

data = [
  'array.hh',
  'constants.hh',
  'extension.hh',
  'fcmp.hh',
  'functor.hh',
  'integration.hh',
  'MersenneTwister.h',
  'model_extension.hh',
  'models.hh',
  'myArray.hh',
  'stat_extension.hh',
  'stats.hh',
  'StopWatch.hh',
  'syminv.hh',
  'utils.hh'
]

install_data(
  data,
  install_dir: install_dir / 'sherpa/include/sherpa'
)

subdir('astro')