# sherpa/models/tests/

sources = [
  'test_basic.py',
  'test_model_notebook.py',
  'test_model_op.py',
  'test_model.py',
  'test_parameter.py',
  'test_psf_rebin.py',
  'test_regrid.py',
  'test_regrid_unit.py',
  'test_tablemodel.py',
  'test_template.py',
  'test_template_unit.py'
]

py.install_sources(
  sources,
  subdir: 'sherpa/models/tests'
)
