# sherpa/utils/tests/

sources = [
  'test_akima.py',
  'test_err.py',
  'test_integration.py',
  'test_logging.py',
  'test_parallel.py',
  'test_psf_lowlevel.py',
  'test_psf_rebinning_unit.py',
  'test_random.py',
  'test_root.py',
  'test_utils_error_unit.py',
  'test_utils.py',
  'test_utils_testing.py',
  'test_utils_unit.py'
]

py.install_sources(
  sources,
  subdir: 'sherpa/utils/tests'
)
