# sherpa/astro/ui/tests/

sources = [
  'test_astro_session_image.py',
  'test_astro_session.py',
  'test_astro_supports_pha2.py',
  'test_astro_ui_background.py',
  'test_astro_ui_fluxes.py',
  'test_astro_ui_import.py',
  'test_astro_ui_io.py',
  'test_astro_ui_multi_response.py',
  'test_astro_ui_plot.py',
  'test_astro_ui.py',
  'test_astro_ui_unit.py',
  'test_astro_ui_utils_simulation.py',
  'test_astro_ui_utils_unit.py',
  'test_eqwidth_err.py',
  'test_filtering.py',
  'test_nan.py',
  'test_serialize.py',
  'test_session_copy.py'
]

py.install_sources(
  sources,
  subdir: 'sherpa/astro/ui/tests'
)

subdir('data')
