# sherpa/astro/datastack/tests/data/

data = [
  '3c273.arf',
  '3c273_bg.pi',
  '3c273cp.pi',
  '3c273.lis',
  '3c273.pi',
  '3c273.rmf',
  'acisf04938_000N002_r0043_arf3.fits',
  'acisf04938_000N002_r0043_pha3.fits',
  'acisf04938_000N002_r0043_rmf3.fits',
  'acisf07867_000N001_r0002_arf3.fits',
  'acisf07867_000N001_r0002_pha3.fits',
  'acisf07867_000N001_r0002_rmf3.fits',
  'pha.lis'
]

install_data(
  data,
  install_dir: install_dir / 'sherpa/astro/datastack/tests/data'
)
